# ckanext-create_typed_package

./: .gitignore  .markdown-preview.html  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/create_typed_package/: config.py  config_declaration.yaml  helpers.py  plugin.py  views.py
ckanext/create_typed_package/assets/: resource.config  webassets.yml
ckanext/create_typed_package/assets/scripts/: package-type-selector.js
ckanext/create_typed_package/logic/: action.py  auth.py
ckanext/create_typed_package/templates/: page.html
ckanext/create_typed_package/templates/create_typed_package/snippets/: asset.html  resource.html
ckanext/create_typed_package/templates/package/snippets/: ctp_select_dataset_type_form.html
ckanext/create_typed_package/templates/snippets/: add_dataset.html
ckanext/create_typed_package/tests/: test_plugin.py  test_view.py
ckanext/create_typed_package/tests/logic/: test_action.py  test_auth.py
ckanext/create_typed_package/tests/schemas/: first.yaml  second.yaml  third.yaml
